GARPDev-salesforce/eclipse/GARPDev/src/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To define weather the Room is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_capacity__c</fullName>
        <label>Assigned capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <inlineHelpText>This number determines Number of seats a Room has</inlineHelpText>
        <label>Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Please input the priority in which the Rooms are filed out for each Venue.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_capacity__c</fullName>
        <formula>Capacity__c - Assigned_capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seats_Allocated__c</fullName>
        <description>The number of seats allocated from room. ( ERP + MAX( FRM1, FRM2) )</description>
        <label>Seats Allocated</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Room</relationshipLabel>
        <relationshipName>Room</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hasSeatsAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasSeatsAssigned</label>
        <type>Checkbox</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Venue__c</columns>
        <columns>Capacity__c</columns>
        <columns>Assigned_capacity__c</columns>
        <columns>Remaining_capacity__c</columns>
        <columns>Seats_Allocated__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>hasSeatsAssigned__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rooms</label>
    </listViews>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_if_cap_less_than_assigned_seats</fullName>
        <active>true</active>
        <description>Checking to see if capacity is being decreased to a level that will not accommodate existing exam candidates</description>
        <errorConditionFormula>Seats_Allocated__c  &gt; Capacity__c</errorConditionFormula>
        <errorDisplayField>Capacity__c</errorDisplayField>
        <errorMessage>Cannot save new capacity... Remove some candidates and try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_if_room_is_empty</fullName>
        <active>true</active>
        <description>Can&apos;t deactivate room unless it&apos;s empty</description>
        <errorConditionFormula>AND( hasSeatsAssigned__c , NOT( Active__c ) )</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Cannot deactivate Room until ALL candidates have been moved to other Rooms.</errorMessage>
    </validationRules>
</CustomObject>